[package]
name = "tuning"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "57.1.0", features = ["prettyprint", "csv"] }
chrono = "0.4.42"
clickhouse-rs = { version = "1.1.0-alpha.1", features = ["default"]}
dotenvy = "0.15.7"
futures-util = "0.3.31"
rust_decimal = "1.36"
tokio = { version = "1.48.0", features = ["full"] }

ndarray = "0.17.1"
kodama = "0.3.0"